--- a/config/database.yml
+++ b/config/database.yml
@@ -15,14 +15,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
+  username: postgres
+  password: 12345678
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
 
-
 development:
   <<: *default
-  database: games_demo_app_development
+  database: games_demo_app
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -56,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: games_demo_app_test
+  database: games_demo_app
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
