--- a/config/database.yml
+++ b/config/database.yml
@@ -15,15 +15,20 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: postgres
-  password: 12345678
+  # username: postgres
+  # password: 12345678
+  username: games_demo_app_user
+  password: FFmyM68ctzfn4TPfF1RWn82tZyCkhoTk
+  host: dpg-cv0ktqggph6c738oman0-a
+  port: 5432
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
+  url: <%= ENV["DATABASE_URL"] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  database: games_demo_app
 
 development:
   <<: *default
-  database: games_demo_app
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -57,7 +62,6 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: games_demo_app
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,20 +84,4 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: games_demo_app_production
-    username: games_demo_app
-    password: <%= ENV["GAMES_DEMO_APP_DATABASE_PASSWORD"] %>
-  cache:
-    <<: *primary_production
-    database: games_demo_app_production_cache
-    migrations_paths: db/cache_migrate
-  queue:
-    <<: *primary_production
-    database: games_demo_app_production_queue
-    migrations_paths: db/queue_migrate
-  cable:
-    <<: *primary_production
-    database: games_demo_app_production_cable
-    migrations_paths: db/cable_migrate
+  <<: *default
